# embedded-cpp-llm-refactor

./: CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: experiment_log_template.md  research_protocol.md
samples/: legacy_motor_controller.cpp
src/embedded_cpp_llm_refactor/: __init__.py  cli.py  metrics.py  refactor.py
tests/: test_refactor.py
