[project]
name = "embedded-cpp-llm-refactor"
version = "0.1.0"
description = "Embedded C++ refactoring and unit-test generation research demo."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Research Project Maintainer" }
]
keywords = ["embedded-cpp", "llm", "refactoring", "unit-testing", "research"]

[project.scripts]
embedded-cpp-refactor = "embedded_cpp_llm_refactor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
